Controller - Sonar Issues